View isnt working,Everything else is complete

--- a/sass/partials/_form.sass
+++ b/sass/partials/_form.sass
@@ -39,6 +39,8 @@ fieldset
   padding-left: 1rem
   padding-right: 1rem
   height: 50%
+  #selectImg
+    display: none
 
 select
   width: 100%
@@ -57,6 +59,8 @@ button
   letter-spacing: 1.5px
   font-size: 2.5rem
   font-weight: bolder
+
+
 
 
 
@@ -97,6 +101,8 @@ section
           padding-left: 1rem
           letter-spacing: .2rem
           color: black
+        button
+          width: 4rem
 
 
 
