--- a/css/main.css
+++ b/css/main.css
@@ -179,6 +179,8 @@ fieldset {
   padding-left: 1rem;
   padding-right: 1rem;
   height: 50%; }
+  fieldset #selectImg {
+    display: none; }
 
 select {
   width: 100%;
@@ -256,11 +258,14 @@ section .carList {
         padding-left: 1rem;
         letter-spacing: .2rem;
         color: black; }
+      section .carList ul li button {
+        width: 4rem; }
 
 .carResults {
   width: 81%;
   height: 80rem;
-  background-image: url("../img/r.jpg");
-  background-size: cover;
   margin-top: 1rem;
   margin-left: 1rem; }
+  .carResults img {
+    height: 100%;
+    width: auto; }
