--- a/sass/partials/_carResults.sass
+++ b/sass/partials/_carResults.sass
@@ -1,7 +1,8 @@
 .carResults
   width: 81%
   height: 80rem
-  background-image: url('../img/r.jpg')
-  background-size: cover
   margin-top: 1rem
   margin-left: 1rem
+  img 
+    height: 100%
+    width: auto
